--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@angular/router": "4.4.4",
     "bootstrap": "3.3.7",
+    "crypto-js": "4.1.1",
     "git-commit-info": "1.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
     "material-design-icons": "3.0.1",
     "md2": "0.0.18",
     "ngx-pagination": "^3.0.0",
+    "node-sass": "^9.0.0",
     "rxjs": "5.4.3",
     "tether": "^1.4.0",
     "webpack": "3.11.0",
     "xlsx": "0.16.2",
-    "zone.js": "0.8.18",
-    "crypto-js": "4.1.1"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@angular/cdk": "2.0.0-beta.11",
@@ -51,6 +52,8 @@
     "@types/jasmine": "2.6.0",
     "codelyzer": "3.2.1",
     "font-awesome": "4.7.0",
+    "grunt": "1.0.3",
+    "grunt-war": "0.5.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.0",
@@ -62,8 +65,6 @@
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
     "tslint": "5.7.0",
-    "typescript": "2.4.0",
-    "grunt": "1.0.3",
-    "grunt-war": "0.5.1"
+    "typescript": "2.4.0"
   }
 }
