--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -2,19 +2,20 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "develop"]
+    branches: [ "develop" ]
     paths-ignore:
-     - target/**
-     - dist/**
-     
+      - target/**
+      - dist/**
   pull_request:
-     branches: [ "develop" ]
-     paths-ignore:
-     - target/**
-     - dist/**
+    # The branches below must be a subset of the branches above
+    branches: [ "develop" ]
+    paths-ignore:
+      - target/**
+      - dist/**
 jobs:
   analyze:
     name: Analyze
+
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
     timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
     permissions:
@@ -22,14 +23,21 @@ jobs:
       contents: read
       security-events: write
 
+ 
+
     strategy:
       fail-fast: false
       matrix:
         language: [ 'javascript' ]
-    
+
+
+ 
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+ 
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -37,25 +45,13 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Setup JDK 8
-      uses: actions/setup-java@v2
-      with:
-          java-version: 8
-          distribution: 'adopt'
-          
-              
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-          node-version: 14
-          
-    - name: Build with NPM
-      run: |
-          npm install -g @angular/cli
-          npm install typescript@2.7.2 --save-dev
-          npm install
-          npm run build
-          npm run ng build --prod
+    # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
+    # If this step fails, then you should remove it and run the build manually (see below)
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@v2
+
+ 
+
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
       with:
